[tool.poetry]
name = "stock web app"
version = "0.1.0"
description = ""
authors = ["Alexander"]
readme = "README.md"

packages = [
    {include = "*", from = "src"}
]

[tool.poetry.scripts]
hello = "hello_app.hello_main:main"
bye = "bye_app.bye_main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.4"
pylint = "^3.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
radon = "^6.0.1"
bandit = "^1.8.0"
pytest-cov = "^6.0.0"
pdoc = "^15.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-fail-under=80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
